# crazyflie-firmware

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  REST.md
buildbot/: Dockerfile.buildbot  Dockerfile.buildbot-base  Dockerfile.dev  master.cfg  mkimage-buildbot-base.sh  mkimage-buildbot.sh  mkimage-dev.sh  sudoers.dev
config/: FreeRTOSConfig.h  config.h  nvicconf.h  stm32f10x_conf.h
drivers/interface/: adc.h  exti.h  hmc5883l.h  i2cdev.h  i2croutines.h  led.h  motors.h  mpu6050.h  ms5611.h  nRF24L01reg.h  nrf24l01.h  nvic.h
drivers/src/: adc.c  exti.c  hmc5883l.c  i2cdev.c  i2croutines.c  led.c  motors.c  mpu6050.c  ms5611.c  nrf24l01.c  nvic.c
hal/interface/: eskylink.h  freeRTOSdebug.h  imu.h  ledseq.h  pm.h  radiolink.h  uart.h  usec_time.h
hal/src/: eskylink.c  freeRTOSdebug.c  imu.c  ledseq.c  pm.c  radiolink.c  uart.c  usec_time.c
init/: main.c
lib/CMSIS/Core/CM3/: core_cm3.c  core_cm3.h  stm32f10x.h  system_stm32f10x.c  system_stm32f10x.h
lib/FreeRTOS/: croutine.c  list.c  queue.c  tasks.c  timers.c
lib/FreeRTOS/include/: FreeRTOS.h  StackMacros.h  croutine.h  list.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  task.h  timers.h
lib/FreeRTOS/portable/GCC/ARM_CM3/: port.c  portmacro.h
lib/FreeRTOS/portable/MemMang/: heap_1.c  heap_2.c  heap_3.c  heap_4.c
lib/STM32F10x_StdPeriph_Driver/inc/: misc.h  stm32f10x_adc.h  stm32f10x_bkp.h  stm32f10x_can.h  stm32f10x_crc.h  stm32f10x_dac.h  stm32f10x_dbgmcu.h  stm32f10x_dma.h  stm32f10x_exti.h  stm32f10x_flash.h  stm32f10x_fsmc.h  stm32f10x_gpio.h  stm32f10x_i2c.h  stm32f10x_iwdg.h  stm32f10x_pwr.h  stm32f10x_rcc.h  stm32f10x_rtc.h  stm32f10x_sdio.h  stm32f10x_spi.h  stm32f10x_tim.h  stm32f10x_usart.h  stm32f10x_wwdg.h
lib/STM32F10x_StdPeriph_Driver/src/: misc.c  stm32f10x_adc.c  stm32f10x_bkp.c  stm32f10x_can.c  stm32f10x_crc.c  stm32f10x_dac.c  stm32f10x_dbgmcu.c  stm32f10x_dma.c  stm32f10x_exti.c  stm32f10x_flash.c  stm32f10x_fsmc.c  stm32f10x_gpio.c  stm32f10x_i2c.c  stm32f10x_iwdg.c  stm32f10x_pwr.c  stm32f10x_rcc.c  stm32f10x_rtc.c  stm32f10x_sdio.c  stm32f10x_spi.c  stm32f10x_tim.c  stm32f10x_usart.c  stm32f10x_wwdg.c
modules/interface/: comm.h  commander.h  console.h  controller.h  crtp.h  crtpservice.h  info.h  log.h  param.h  pid.h  pidctrl.h  sensfusion6.h  stabilizer.h  system.h  worker.h
modules/src/: comm.c  commander.c  console.c  controller.c  crtp.c  crtpservice.c  info.c  log.c  param.c  pid.c  pidctrl.c  sensfusion6.c  stabilizer.c  system.c  worker.c
scripts/: clang-format-all.sh  print_revision.sh  update_version.sh  versionTemplate.py
test/: atomic.c  hello.c  run.sh
utils/interface/: cfassert.h  configblock.h  cpuid.h  crc.h  debug.h  eprintf.h  filter.h  fp16.h  version.h
utils/src/: cfassert.c  configblock.c  cpuid.c  crc.c  debug.c  eprintf.c  filter.c  fp16.c
